Fix conditions edit modal overflow

--- a/src/widgets/edit/Conditional/ConditionsEdit/InputRow/Attributes/styles.scss
+++ b/src/widgets/edit/Conditional/ConditionsEdit/InputRow/Attributes/styles.scss
@@ -10,6 +10,7 @@
 
     .multi-input {
         flex-shrink: 0;
+        padding-right: $spacing-small;
         width: 180px;
     }
 }
